syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Hello {
  string world = 1;
  repeated string hello = 2;

  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Duration duration = 4;

  repeated google.protobuf.Timestamp rep_timestamp = 5;
  repeated google.protobuf.Duration rep_duration = 6;

  map<string, string> names_map = 7;
  Greeting greeting = 8;
  repeated Greeting greetings = 9;
}

message TimestampAndDurations {
  repeated SubMessage rep = 1;
  repeated google.protobuf.Timestamp rep_timestamp = 2;
  repeated google.protobuf.Duration rep_duration = 3;
  repeated string rep_string = 4;
}

message SubMessage {
  google.protobuf.Timestamp timestamp = 1;
  google.protobuf.Duration duration = 2;
}

message Greeting {
  string greeting = 1;
  string farewell = 2;
}
